# Odds-Gym

./: .buildinfo  .gitignore  README.md  conf.py  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: createrelease.yml  deploydocs.yml  integration.yml  pypipublish.yaml  pypipublish.yml  testpackage.yml
_sources/docsrc/: api.rst.txt  roadmap.rst.txt
docsrc/: api.html  api.rst  basic.html  basic.rst  installation.html  installation.rst  roadmap.html  roadmap.rst  theory.html  theory.rst
doctrees/: environment.pickle  index.doctree
doctrees/docsrc/: api.doctree  basic.doctree  installation.doctree  roadmap.doctree  theory.doctree
examples/: 3-Way Soccer example.ipynb  README.md  examples_requirements.txt
html/: .buildinfo  genindex.html  index.html  search.html
html/_sources/: index.rst.txt
html/_sources/docsrc/: api.rst.txt  basic.rst.txt  installation.rst.txt
html/docsrc/: api.html  basic.html  installation.html  roadmap.html  theory.html
oddsgym/envs/: __init__.py  base.py  base_percentage.py  daily_bets.py  footballdata.py  meta.py  soccer.py  tennis.py  tennisdata.py
oddsgym/utils/: csv_downloader.py
oddsgym/utils/constants/: __init__.py  football.py  tennis.py
tests/: conftest.py  test_base_env.py  test_base_percentage.py  test_base_percentage_env.py  test_csv_downloader.py  test_daily_env.py  test_daily_percentage_env.py  test_footballdata_env.py  test_integration_with_rllib.py  test_integration_with_stable_baselines.py  test_integration_with_stable_baselines_v3.py  test_tennis_daily_env.py  test_tennis_daily_percentage_env.py  test_tennis_env.py  test_tennis_percentage_env.py  test_tennisdata_env.py  test_three_way_daily_env.py  test_three_way_daily_percentage_env.py  test_three_way_env.py  test_three_way_percentage_env.py
