[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "oddsgym"
dynamic = ["version"]
description = "A sports betting environment for OpenAI Gym"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Ory Jonay" },
]
dependencies = [
    'gymnasium', 
    'more-itertools', 
    'pandas', 
    'numexpr', 
    'tabulate', 
    'aiohttp', 
    'typer',
    'numpy<2',
]

[project.optional-dependencies]
tests = [
    'pytest', 
    'pytest-cov', 
    'coveralls',
]
examples = [
    'jupyter', 
    'notebook', 
    'stable-baselines',
]
integration = [
    'torch', 
    'ray[rllib]',
]

[project.scripts]
create-csv-cache = "oddsgym.utils.csv_downloader:main"

[project.urls]
Homepage = "https://github.com/OryJonay/Odds-Gym"

[tool.hatch.version]
source = "regex_commit"
path = "oddsgym/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/oddsgym",
]


[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "ray[rllib]; python_version != '3.12' and python_version != '3.9'",
  "torch; python_version != '3.12' and python_version != '3.9'"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-static-analysis]
extra-dependencies = ["black", "isort"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "black --check --diff {args:.}",
  "isort --check-only --profile black --diff {args:.}",
]
format-fix = [
  "isort --profile black {args:.}",
  "black {args:.}",
]
lint-check = "ruff check {args:.}"
lint-fix = "lint-check --fix"

[tool.hatch.envs.docs]
extra-dependencies = ["Sphinx", "sphinx-material"]