[bumpversion]
current_version = 0.6.0
commit = True
tag = True

[metadata]
name = oddsgym
url = https://github.com/OryJonay/Odds-Gym
licence = Apache License, Version 2.0
description = A sports betting environment for OpenAI Gym
author = Ory Jonay
author-email = kriegsmeister@gmail.com

[options]
install_requires = gym; more-itertools; pandas

[options.extras_require]
examples = jupyter; notebook; stable-baselines
tests = pytest; pytest-cov; coveralls
docs = Sphinx; sphinx-rtd-theme

[bumpversion:file:setup.cfg]
