[bumpversion]
current_version = 0.7.3
commit = True
tag = True

[metadata]
name = oddsgym
url = https://github.com/OryJonay/Odds-Gym
licence = Apache License, Version 2.0
description = A sports betting environment for OpenAI Gym
author = Ory Jonay
author-email = kriegsmeister@gmail.com

[options]
install_requires = gym; more-itertools; pandas; numexpr; tabulate;

[options.extras_require]
examples = jupyter; notebook; stable-baselines
tests = pytest; pytest-cov; coveralls
docs = Sphinx; sphinx-rtd-theme
integration = stable-baselines[mpi]; stable-baselines3[extra]; tensorflow<=1.15.2; ray[rllib]

[bumpversion:file:setup.cfg]
